<resources>

    <string name="app_name">ReMoCo</string>
    <string name="menu_settings">設定</string>
    <string name="menu_help">ヘルプ</string>
    <string name="wifi">Wi-Fi</string>
    <string name="usb">USB</string>
    <string name="mouse">mouse</string>
    <string name="table">table</string>
    <string name="pad_key_not">!</string>
    <string name="pad_key_left">←</string>
    <string name="pad_key_down">↓</string>
    <string name="pad_key_up">↑</string>
    <string name="pad_key_right">→</string>
    <string name="pad_key_space">SP</string>
    <string name="chronometer">Chronometer</string>
    <string name="close">✖</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="kye_insert">Insert</string>
    <string name="key_home">Home</string>
    <string name="key_pu">Page\\nUp</string>
    <string name="ke_delete">Delete</string>
    <string name="key_end">End</string>
    <string name="key_pd">Page\\nDown</string>

</resources>