<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_mouse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_mouse"
    android:orientation="vertical"
    tools:ignore="UselessParent" xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background_light"
            android:onClick="onStop"
            android:padding="20dp"
            android:tag="4,esc"
            android:text="@string/stop"
            android:textColor="#aaa"
            android:textColorLink="#aaa" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="3dp"
            android:layout_toLeftOf="@+id/button1"
            android:background="@drawable/background_light"
            android:onClick="onStart"
            android:padding="20dp"
            android:tag="6,5"
            android:text="@string/start"
            android:textColor="#aaa" />

        <Chronometer
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button1"
            android:layout_marginTop="66dp"
            android:onClick="onChangePage"
            android:textColorHint="#aaa"
            android:textSize="50sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/frame" >

        <Button
            android:id="@+id/left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:tag="3,l"
            android:text="@string/pad_key_left"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="80sp" />

        <Button
            android:id="@+id/right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:onClick="onChangePage"
            android:tag="3,r"
            android:text="@string/pad_key_right"
            android:textColor="#fff"
            android:textSize="80sp" />

    </LinearLayout>

</LinearLayout>